공유 기능 계속 진행중

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <meta name="title" property="og:title" content="소행성" />
+    <meta name="title" property="og:title" content="소행성:나를 변화시키는 습관" />
     <meta name="description" property="og:description" content="동기부여가 가득한 습관형성 플랫폼 소행성으로 놀러오세요!"/>
     <meta name="image" property="og:image" content="%PUBLIC_URL%/logo_xl@2x.png" />
     <meta name="url" property="og:url" content="https://sohangsung.co.kr/" />
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>소행성:먼 미래보다 행복한 하루</title>
+    <title>소행성:나를 변화시키는 습관</title>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
