--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta name="title" property="og:title" content="소행성:나를 변화시키는 습관" />
     <meta name="description" property="og:description" content="동기부여가 가득한 습관형성 플랫폼 소행성으로 놀러오세요!"/>
-    <meta name="image" property="og:image" content="%PUBLIC_URL%/logo_xl@2x.png" />
+    <meta name="image" property="og:image" content="https://roffjrrnf.s3.ap-northeast-2.amazonaws.com/image/5c8e86e3-57f0-4ff6-a542-1dfc1175eb0basteroid.png" />
     <meta name="url" property="og:url" content="https://sohangsung.co.kr/" />
     <meta name='twitter:title', content= '소행성'/> 
     <meta name='twitter:description', content= '동기부여가 가득한 습관형성 플랫폼 소행성으로 놀러오세요!'/> 
     <meta name='twitter:card', content= 'summary'/> 
     <meta name='twitter:url', content= 'https://sohangsung.co.kr/'/> 
-    <meta name='twitter:image', content= '%PUBLIC_URL%/logo_xl@2x.png'/>
+    <meta name='twitter:image', content= 'https://roffjrrnf.s3.ap-northeast-2.amazonaws.com/image/5c8e86e3-57f0-4ff6-a542-1dfc1175eb0basteroid.png'/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_xl@2x.png"/>
     <!--
