아이콘 수정

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name='twitter:url', content= 'https://sohangsung.co.kr/'/> 
     <meta name='twitter:image', content= 'https://roffjrrnf.s3.ap-northeast-2.amazonaws.com/image/e16c44c5-8b12-4175-a69a-c5e964071b7cKakaoTalk_Photo_2022-03-24-09-01-20.png'/>
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_xl@2x.png"/>
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_xl@2x.png"/> -->
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
