--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="76x76" href="./icons/apple-touch-icon-76x76.png" />
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="./icons/apple-touch-icon-152x152.png" />
     <meta name="application-name" content="&nbsp;"/>
+    <meta name="apple-mobile-web-app-title" content="소행성" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="./icons/mstile-144x144.png" />
     <meta name="msapplication-square70x70logo" content="./icons/mstile-70x70.png" />
