--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./icons/apple-touch-icon-57x57.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#fff" />
     <meta name="title" property="og:title" content="소행성:나를 변화시키는 습관" />
     <meta name="description" property="og:description" content="동기부여가 가득한 습관형성 플랫폼 소행성으로 놀러오세요!"/>
     <meta name="image" property="og:image" content="https://roffjrrnf.s3.ap-northeast-2.amazonaws.com/image/e16c44c5-8b12-4175-a69a-c5e964071b7cKakaoTalk_Photo_2022-03-24-09-01-20.png" />
