--- a/src/shared/mail.html
+++ b/src/shared/mail.html
@@ -59,23 +59,25 @@
     
     <body>
         <!-- OUTERMOST CONTAINER TABLE -->
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" id="bodyTable">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 100%;" id="bodyTable">
             <tr>
             <td>
         
                 <!-- 600px - 800px CONTENTS CONTAINER TABLE -->
-                <table class="wrap" border="0" cellpadding="0" cellspacing="0" width="600" bgcolor="#f4f6fa">
+                <table class="wrap" style="width:600px; background-color:#f4f6fa; text-align: center; margin: 52px auto; padding: 20px;" border="0" cellpadding="0" cellspacing="0" width="600" bgcolor="#f4f6fa">
                 <tr>
                     <td>
                         <p style="margin-bottom:2px;">나를 변화시키는 습관</p>
-                        <img src="https://cdn.zeplin.io/621e12f0e852c95657d567c4/assets/e5af9775-c12b-4c67-96e7-115076896e5a.svg" alt="logo image" width="106" height="50"/>
-                        <div class="box" bgcolor="#ffffff">
+                        <img src="https://roffjrrnf.s3.ap-northeast-2.amazonaws.com/image/6bbb5d8a-07d6-44e6-a150-87c97665120flogo_image.png" alt="logo image" style="width:106px; height: 50px;" width="106" height="50"/>
+                        <div class="box" style="border-radius: 10px; background-color: #fff; padding: 28px 24px; text-align: left; margin-top: 32px;" bgcolor="#ffffff">
                             <h1 style="font-size: 18px; margin-bottom: 14px;">메일 인증 안내입니다.</h1>
-                            <p>안녕하세요.<br/>
-                                저희 소행성을 가입해주셔서 진심으로 감사드립니다!<br/> 아래 <span style="font-weight: bold;">'이메일 인증'</span> 버튼을 클릭하여 회원가입을 완료해 주세요.<br/>
+                            <p style="font-size: 15px;">안녕하세요.<br/>
+                                저희 소행성을 가입해주셔서 진심으로 감사드립니다!<br/> 아래 <span style="color:#4149d3; font-weight: bold;">'이메일 인증'</span> 버튼을 클릭하여 회원가입을 완료해 주세요.<br/>
                                 감사합니다!</p>
-                            <a href="">이메일 인증</a>
-                            <div class="bottom">
+                            <a href="https://www.sohangsung.co.kr/login">
+                                <p style="display: block; width: 136px; height: 54px; margin-top: 28px;margin-left: auto;margin-bottom: 72px;margin-right: auto;border-radius: 10px;background-color: #4149d3; color:#ffffff; line-height: 54px; text-decoration: none; text-align: center;">이메일 인증</p>
+                            </a>
+                            <div class="bottom" style="color: #a2aab3; padding-top: 27px; border-top: 1px solid #eff0f2;">
                                 <p style="font-size: 12px;">만약 버튼이 정상적으로 클릭되지 않는다면,<br/>
                                     플랫폼으로 돌아가서 '이메일 재발송'을 버튼을 클릭하여 다시 시도해 주세요.</p>
                             </div>
