검수 및 수정
-카테고리탭 스크롤바 변경
- 실시간 인증 리스트 카드 cursor:pointer로 변경
- 공유하기 버튼 배경색 깔기
- pwa 수정중

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#fff" />
+    <meta name="theme-color" content="#030102"/>
     <meta name="title" property="og:title" content="소행성:나를 변화시키는 습관" />
     <meta name="description" property="og:description" content="동기부여가 가득한 습관형성 플랫폼 소행성으로 놀러오세요!"/>
     <meta name="image" property="og:image" content="https://roffjrrnf.s3.ap-northeast-2.amazonaws.com/image/e16c44c5-8b12-4175-a69a-c5e964071b7cKakaoTalk_Photo_2022-03-24-09-01-20.png" />
@@ -15,16 +15,14 @@
     <meta name='twitter:url', content= 'https://sohangsung.co.kr/'/> 
     <meta name='twitter:image', content= 'https://roffjrrnf.s3.ap-northeast-2.amazonaws.com/image/e16c44c5-8b12-4175-a69a-c5e964071b7cKakaoTalk_Photo_2022-03-24-09-01-20.png'/>
 
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_xl@2x.png"/> -->
-
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./icons/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./icons/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./icons/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./icons/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="./icons/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="./icons/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="./icons/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="./icons/apple-touch-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="./icons/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="./icons/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./icons/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./icons/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./icons/apple-touch-icon-152x152.png" />
     <meta name="application-name" content="&nbsp;"/>
     <meta name="apple-mobile-web-app-title" content="소행성" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -40,7 +38,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="/manifest" href="./manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
