--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="url" property="og:url" content="https://sohangsung.co.kr/" />
     <meta name='twitter:title', content= '소행성'/> 
     <meta name='twitter:description', content= '동기부여가 가득한 습관형성 플랫폼 소행성으로 놀러오세요!'/> 
-    <meta name='twitter:card', content= 'summary'/> 
+    <meta name='twitter:card', content= 'summary'/>
     <meta name='twitter:url', content= 'https://sohangsung.co.kr/'/> 
     <meta name='twitter:image', content= 'https://roffjrrnf.s3.ap-northeast-2.amazonaws.com/image/e16c44c5-8b12-4175-a69a-c5e964071b7cKakaoTalk_Photo_2022-03-24-09-01-20.png'/>
 
@@ -23,6 +23,10 @@
     <link rel="apple-touch-icon" sizes="120x120" href="./icons/apple-touch-icon-120x120.png" />
     <link rel="apple-touch-icon" sizes="76x76" href="./icons/apple-touch-icon-76x76.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="./icons/apple-touch-icon-152x152.png" />
+
+    <link rel="apple-touch-icon" sizes="192x192" href="./icons/192x192.png" />
+    <link rel="apple-touch-icon" sizes="310x310" href="./icons/310x310.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="./icons/512x512.png" />
     <meta name="application-name" content="&nbsp;"/>
     <meta name="apple-mobile-web-app-title" content="소행성" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -32,7 +36,6 @@
     <meta name="msapplication-square150x150logo" content="./icons/mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="./icons/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="./icons/mstile-310x310.png" />
-
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
