--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,6 @@
     <link rel="apple-touch-icon" sizes="120x120" href="./icons/apple-touch-icon-120x120.png" />
     <link rel="apple-touch-icon" sizes="76x76" href="./icons/apple-touch-icon-76x76.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="./icons/apple-touch-icon-152x152.png" />
-
     <link rel="apple-touch-icon" sizes="192x192" href="./icons/192x192.png" />
     <link rel="apple-touch-icon" sizes="310x310" href="./icons/310x310.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="./icons/512x512.png" />
@@ -41,7 +40,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="/manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
